fix card spacing and background color

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 
 .header__heading {
   margin-bottom: 2rem;
-  font-size: 3rem;
+  font-size: 3.6rem;
   text-align: center;
   color: hsl(234, 12%, 34%);
 }
@@ -60,10 +60,11 @@ body {
 
 .card {
   position: relative;
-  padding: 3.2rem 2.4rem;
+  padding: 2.8rem 2.4rem;
   box-shadow: 0 12px 10px hsla(212, 86%, 64%, 0.1);
   border-radius: 11px;
   overflow: hidden;
+  background-color: hsl(0, 0%, 100%);
 }
 
 .line {
@@ -119,6 +120,6 @@ body {
 
 .icon {
   position: absolute;
-  bottom: 2.4rem;
-  right: 2.4rem;
+  bottom: 3.2rem;
+  right: 3.2rem;
 }
